[package]
name = "hll"
version = "0.1.0"
authors = ["Adam Shirey <adam@shirey.ch>"]
edition = "2018"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
hyperloglog = { git = "https://github.com/aeshirey/rust-hyperloglog" }
siphasher = "0.3.3"
clap = "2.33.3"
csv = "1.1.3"